tests-integration/fixtures/checking/1772823900_record_expression_nested_additional/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 39
expression: report
---
Terms
test :: { outer :: { x :: Int } }

Types

Diagnostics
error[AdditionalProperty]: Additional properties not allowed: y
  --> 4:17..4:31
  |
4 | test = { outer: { x: 1, y: 2 } }
  |                 ^~~~~~~~~~~~~~
